; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/extr_log.c_event_exit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/extr_log.c_event_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EVENT_ERR_ABORT_ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @event_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @event_exit(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  br i1 true, label %3, label %8

3:                                                ; preds = %1
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @fatal_fn(i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @exit(i32 %6) #3
  unreachable

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @EVENT_ERR_ABORT_, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %8
  %13 = call i32 (...) @abort() #3
  unreachable

14:                                               ; preds = %8
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @exit(i32 %15) #3
  unreachable
}

declare dso_local i32 @fatal_fn(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
